# foris-controller-collectd-module

./: .gitlab-ci.yml  CHANGELOG.md  CHANGELOG.rst  README.rst  pyproject.toml  setup.py
foris_controller_backends/collectd/: __init__.py
foris_controller_collectd_module/: __init__.py  announcer.py
foris_controller_modules/collectd/: __init__.py
foris_controller_modules/collectd/handlers/: __init__.py  mock.py  openwrt.py
foris_controller_modules/collectd/schema/: collectd.json
tests/: conftest.py  test_collectd.py
tests/test_root/sbin/: ifstatus
tests/test_root/usr/libexec/follectd/: neighbours.sh
